# SekiroItemsDLL

./: Cargo.toml  LICENSE  README.md
crates/sekiro-items/: Cargo.toml  items.json
crates/sekiro-items-dev/: Cargo.toml
crates/sekiro-items-dev/src/: hook.rs  item_grant.rs  lib.rs  overlay.rs
crates/sekiro-items/src/: hotkey.rs  lib.rs  overlay.rs
