[workspace]
resolver = "2"
members = [
    "crates/sekiro-items",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
fromsoftware-shared = { git = "https://github.com/nex3/fromsoftware-rs", branch = "merged" }
hudhook = "0.8.1"
ilhook = {version = "2.3.0", features = ["x64"]}

[workspace.dependencies.windows]
version = "0.54"
features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
]